[package]
name = "pa"
version = "0.1.0"
authors = ["Kevin Liao <kevliao@mit.edu>"]
edition = "2018"

[dependencies]
bincode = "1.3.2"
blake3 = "0.3.7"
bytes = "1.0.1"
criterion = "0.3.3"
dashmap = "4.0.2"
futures = { version = "0.3.13", features = ["thread-pool"] }
hex = "0.4.2"
hpke = "0.5.0"
native-tls = "0.2.7"
rand = "0.7.3"
rug = "1.11.0"
rug-polynomial = "0.2.0"
serde = { version = "1.0.123", features = ["derive"] }
tarpc = { version = "0.24", features = ["full", "serde-transport", "tcp", "tokio1"] }
tokio = { version = "1.2.0", features = ["full"] }
tokio-native-tls = "0.3.0"
tokio-rustls = "0.22.0"
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-stream = { version = "0.1.3", features = ["net"] }
tokio-util = { version = "0.6.3", features = ["full"] }
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "follower"
path = "src/bin/follower.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "gen_config"
path = "src/bin/gen_config.rs"

[[bin]]
name = "precompute"
path = "src/bin/precompute.rs"